# lp1-snaze

./: .gitignore  README.md  author.md
source/: CMakeLists.txt
source/include/: level.h  player.h  snake.h  snaze_game.h
source/src/: level.cpp  player.cpp  snake.cpp  snaze.cpp  snaze_game.cpp
